--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
 
   /* Display a point marker with pop-up text */
   L.marker([41.77, -72.69]).addTo(map) // EDIT marker coordinates
-  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+  .bindPopup("Trinity College"); // EDIT pop-up text message
+  
+  /* Wesleyan Marker */
+  L.marker([41.56, -72.66]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Wesleyan University"); // EDIT pop-up text message
+
+  /* Connecticut College Marker */    
+  L.marker([41.38, -72.10]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Connecticut College"); // EDIT pop-up text message
 
   </script>
 </body>
