--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.75, -72.69]).addTo(map) // EDIT marker coordinates
+  L.marker([41.74797241833123, -72.69050380411123]).addTo(map) // EDIT marker coordinates
   .bindPopup("Trinity College"); // EDIT pop-up text message
   
   /* Wesleyan Marker */
-  L.marker([41.56, -72.66]).addTo(map) // EDIT marker coordinates
+  L.marker([41.55699149378579, -72.65691943481059]).addTo(map) // EDIT marker coordinates
   .bindPopup("Wesleyan University"); // EDIT pop-up text message
 
   /* Connecticut College Marker */    
-  L.marker([41.38, -72.10]).addTo(map) // EDIT marker coordinates
+  L.marker([41.379941928514334, -72.1043429041326]).addTo(map) // EDIT marker coordinates
   .bindPopup("Connecticut College"); // EDIT pop-up text message
 
   </script>
